--- a/15.md
+++ b/15.md
@@ -10,6 +10,6 @@
 Компромисным решением может стать использование кеширования данных (memcached) и кластеризация/шардирование
 3. Риски временных ограничений.
 <br />
-В контексте приложения предусмотрена сикросервисная архитектура, однако это целевое представление с учетом нагрузки на решение.
+В контексте приложения предусмотрена микросервисная архитектура, однако это целевое представление с учетом нагрузки на решение.
 <br />
 С учетом временных рамок целесообразно на начальном этапе разрабатывать решение как модульный монолит с последующим выделением модулей в отдельные самостоятельные единицы.
