--- a/16.md
+++ b/16.md
@@ -19,6 +19,8 @@
 На начальном этапе для подтверждения гипотезы, уменьшения стоимости владения и проведения A/B тестов необходимости приложения целесообразно использовать модульный монолит.
 Оценочно 10% нагрузки от максимальной.
 <br />
+Объем диска который потребуется - 10Кб(сообщение) * 1000(сообщений в минуту) * 60 * 24 * 365 ~ до 10 Tb
+<br />
 Решение представляет собой монульный монолит. Достаточно использования сервера до 128 Гб RAM и 10 Tb дискового пространства.
 
 
